--- a/package.json
+++ b/package.json
@@ -6,10 +6,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "filepond": "^4.30.3",
+    "filepond-plugin-image-exif-orientation": "^1.0.11",
+    "filepond-plugin-image-preview": "^4.6.10",
     "jquery": "^3.6.0",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-filepond": "^7.1.1",
+    "react-hook-form": "^7.28.1",
+    "react-select": "^5.2.2"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
