--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "antd": "^4.19.3",
     "filepond": "^4.30.3",
     "filepond-plugin-image-exif-orientation": "^1.0.11",
     "filepond-plugin-image-preview": "^4.6.10",
@@ -15,10 +16,14 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-filepond": "^7.1.1",
+    "react-grid-layout": "^1.3.4",
     "react-hook-form": "^7.28.1",
-    "react-select": "^5.2.2"
+    "react-hot-toast": "^2.2.0",
+    "react-select": "^5.2.2",
+    "zustand": "^3.7.1"
   },
   "devDependencies": {
+    "@ebay/nice-modal-react": "^1.2.1",
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.0",
